--- a/package.json
+++ b/package.json
@@ -3,41 +3,42 @@
 	"version": "1.0.0",
 	"description": "A collection of Stylus CSS.",
 	"private": true,
-	"main": "gulpfile.js",
+	"main": "gulpfile.mjs",
+	"author": "Vijay Hardaha <https://twitter.com/vijayhardaha>",
+	"license": "MIT",
 	"browserslist": [
 		"extends @wordpress/browserslist-config"
 	],
 	"scripts": {
 		"dev": "gulp watch",
-		"prebuild": "npm run lint-fix",
+		"prebuild": "pnpm run lint",
 		"build": "gulp build",
 		"lint": "stylelint src",
-		"lint-fix": "stylelint src --fix"
+		"fix": "stylelint src --fix"
+	},
+	"homepage": "https://github.com/vijayhardaha/stylus-css#readme",
+	"bugs": {
+		"url": "https://github.com/vijayhardaha/stylus-css/issues"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/vijayhardaha/stylus-css.git"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/vijayhardaha/stylus-css/issues"
-	},
-	"homepage": "https://github.com/vijayhardaha/stylus-css#readme",
 	"devDependencies": {
-		"@wordpress/browserslist-config": "^5.0.0",
-		"@wordpress/stylelint-config": "^21.0.0",
-		"autoprefixer": "^10.4.9",
-		"del": "^6.1.1",
+		"@wordpress/browserslist-config": "^5.5.0",
+		"@wordpress/stylelint-config": "^21.5.0",
+		"autoprefixer": "^10.4.13",
+		"del": "^7.0.0",
 		"gulp": "^4.0.2",
 		"gulp-plumber": "^1.2.1",
 		"gulp-postcss": "^9.0.1",
+		"gulp-rename": "^2.0.0",
 		"gulp-replace": "^1.1.3",
 		"gulp-sass": "^5.1.0",
+		"postcss": "^8.4.19",
 		"postcss-discard-duplicates": "^5.1.0",
-		"sass": "^1.54.9",
-		"stylelint": "^14.11.0",
+		"sass": "^1.56.1",
+		"stylelint": "^14.15.0",
 		"stylelint-config-property-sort-order-smacss": "^9.0.0",
 		"stylelint-order": "^5.0.0"
 	}
