--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,14 +5,18 @@
 	],
 	"plugins": ["stylelint-order"],
 	"rules": {
-		"max-line-length": 200,
-		"no-empty-source": null,
-		"function-url-quotes": null,
-		"max-empty-lines": 1,
-		"no-descending-specificity": null,
-		"selector-class-pattern": null,
-		"selector-id-pattern": null,
+		"block-no-empty": null,
 		"comment-no-empty": null,
-		"scss/comment-no-empty": null
+		"function-url-quotes": null,
+		"no-empty-source": null,
+		"max-empty-lines": 1,
+		"max-line-length": 200,
+		"no-descending-specificity": null,
+		"no-invalid-position-at-import-rule": null,
+		"scss/no-global-function-names": null,
+		"scss/comment-no-empty": null,
+		"scss/at-extend-no-missing-placeholder": null,
+		"selector-class-pattern": null,
+		"selector-id-pattern": null
 	}
 }
