--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
 		"@wordpress/browserslist-config": "^5.5.0",
 		"@wordpress/stylelint-config": "^21.5.0",
 		"autoprefixer": "^10.4.13",
+		"bootstrap": "^5.2.2",
 		"del": "^7.0.0",
 		"gulp": "^4.0.2",
+		"gulp-clean-css": "^4.3.0",
 		"gulp-plumber": "^1.2.1",
 		"gulp-postcss": "^9.0.1",
 		"gulp-rename": "^2.0.0",
